tests/sources/invalid/imports/import_cycle_a.fire
// Cyclic import: this module imports a provider that imports it back.
import import_cycle_b_provider.pong;  //~ ERROR FS-PARSE-0003 @40

export fn ping(x: int32) -> int32 {
    return x + 1;
}

r: int32 = pong(1);
